added all files and have html mocked up

--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
+<ul>
+  <li><a href="#" id="link-home">Home</a></li>
+  <li><a href="#" id="link-list">List Music</a></li>
+  <li><a href="#" id="link-add">Add Music</a></li>
+</ul>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Music History</title>
-</head>
+<section id="home-view">
+  Home
+</section>
 
-<body>
+<section class="hidden" id="list-view">
+  List Music
+</section>
 
 
-</body>
-</html>
+<section class="hidden" id="add-view">
+  Add Music
+  <textarea>Artist</textarea>
+  <textarea>Song</textarea>
+  <textarea>Album</textarea>
+  <button>Add Music</button>
+</section>
+
+<script type="text/javascript" src="home.js"></script>
+<script type="text/javascript" src="list.js"></script>
+<script type="text/javascript" src="add.js"></script>
