--- a/index.html
+++ b/index.html
@@ -1,26 +1,121 @@
-<ul>
-  <li><a href="#" id="link-home">Home</a></li>
-  <li><a href="#" id="link-list">List Music</a></li>
-  <li><a href="#" id="link-add">Add Music</a></li>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Music History Version 3</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+</head>
+<body>
+<nav>
+  <ul class ="nav">
+  <li class="inlineMiddle" class="listItem"><a href="#" id="link-list">List Music</a></li>
+  <li class="inlineMiddle" class="listItem"><a href="#" id="link-add">Add Music</a></li>
 </ul>
-
-<section id="home-view">
-  Home
+</nav>
+<!-- <section id="home-view">
 </section>
 
-<section class="hidden" id="list-view">
-  List Music
-</section>
+<section class ="genre" class="hidden" id="list-view">
+  
+</section> --> 
 
 
-<section class="hidden" id="add-view">
+   <!--  <ul class="nav">
+      <li><a href="#">List Music</a></li>
+      <li class="inlineMiddle"><a href="#">Add Music</a></li>
+    </ul>
+  </nav> -->
+<br>
+<section class="genre" id="list-view">
+<br>
+  <label>Song Length:</label>
+  <br>
+  <br>
+    <input type="range">
+<br>
+<br>
+
+<label for="artist">Artist:</label>
+<br>
+        <select id="artist" name="artist">
+            <option value="wu_tang">Wu-Tang Clan</option>
+            <option value="run_the_jewels">Run the Jewels</option>
+            <option value="mumford_sons">Mumford & Sons</option>
+            <option value="the_xx">The XX</option>
+            <option value="pretty_lights">Pretty Lights</option>
+        </select>
+
+<br>
+<br>
+<label for="album">Album:</label>
+<br>
+        <select id="album" name="album">
+            <option value="enter_the_wu_tang">Enter the Wu-Tang (36 Chambers)</option>
+            <option value="wilder_mind">Wilder Mind</option>
+            <option value="coexist">Coexist</option>
+            <option value="xx">XX</option>
+            <option value="filling_up_the_city">Filling Up the City Skies</option>
+        </select>
+<br>
+<br>
+        <label>Genre:</label>
+        <br> 
+        <br>
+          <table>
+            <tr>
+              <td><input type="checkbox" id="rock" value="genre_rock" name="genre_rock"><label class="" for="rock">Rock</label></td>
+              <td><input type="checkbox" id="pop" value="genre_pop" name="genre_pop"><label class="" for="pop">Pop</label></td>
+            </tr>
+            <tr>
+              <td><input type="checkbox" id="blues" value="genre_blues" name="genre_blues"><label class="" for="blues">Blues</label></td>
+              <td><input type="checkbox" id="classical" value="genre_classical" name="genre_classical"><label class="" for="classical">Classical</label></td>
+            </tr>
+            <tr>
+              <td><input type="checkbox" id="jazz" value="genre_jazz" name="genre_jazz"><label class="" for="jazz">Jazz</label></td>
+              <td><input type="checkbox" id="hiphop" value="genre_hiphop" name="genre_hiphop"><label class="" for="rock">Hip-Hop</label></td>
+          </tr>
+          </table> 
+          <br>
+          <div class="button">
+          <button>
+            Filter
+          </button>
+          </div>
+        </section>
+
+        <section class="songInfo" id="list-view">
+          <h1 class="song">Song Name</h1>
+          <p class="inline">Artist Name</p>
+          <p class="inlineMiddle">Album Name</p>
+          <p class="inline">Genre</p>
+          <h1 class="song">Song Name</h1>
+          <p class="inline">Artist Name</p>
+          <p class="inlineMiddle">Album Name</p>
+          <p class="inline">Genre</p>
+          <h1 class="song">Song Name</h1>
+          <p class="inline">Artist Name</p>
+          <p class="inlineMiddle">Album Name</p>
+          <p class="inline">Genre</p>
+          <h1 class="song">Song Name</h1>
+          <p class="inline">Artist Name</p>
+          <p class="inlineMiddle">Album Name</p>
+          <p class="inline">Genre</p>
+        </section>
+
+<section id="add-view">
   Add Music
-  <textarea>Artist</textarea>
-  <textarea>Song</textarea>
-  <textarea>Album</textarea>
+  <input>Artist</input>
+  <input>Song</input>
+  <input>Album</input>
   <button>Add Music</button>
 </section>
 
-<script type="text/javascript" src="home.js"></script>
+      
+
+
 <script type="text/javascript" src="list.js"></script>
 <script type="text/javascript" src="add.js"></script>
+</body>
+</html>
+
