catching up to v3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Music History Version 3</title>
   <link rel="stylesheet" type="text/css" href="main.css">
-  <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
 <nav>
@@ -13,19 +12,7 @@
   <li class="inlineMiddle" class="listItem"><a href="#" id="link-add">Add Music</a></li>
 </ul>
 </nav>
-<!-- <section id="home-view">
-</section>
 
-<section class ="genre" class="hidden" id="list-view">
-  
-</section> --> 
-
-
-   <!--  <ul class="nav">
-      <li><a href="#">List Music</a></li>
-      <li class="inlineMiddle"><a href="#">Add Music</a></li>
-    </ul>
-  </nav> -->
 <br>
 <section class="genre" id="list-view">
 <br>
@@ -84,23 +71,7 @@
           </div>
         </section>
 
-        <section class="songInfo" id="list-view">
-          <h1 class="song">Song Name</h1>
-          <p class="inline">Artist Name</p>
-          <p class="inlineMiddle">Album Name</p>
-          <p class="inline">Genre</p>
-          <h1 class="song">Song Name</h1>
-          <p class="inline">Artist Name</p>
-          <p class="inlineMiddle">Album Name</p>
-          <p class="inline">Genre</p>
-          <h1 class="song">Song Name</h1>
-          <p class="inline">Artist Name</p>
-          <p class="inlineMiddle">Album Name</p>
-          <p class="inline">Genre</p>
-          <h1 class="song">Song Name</h1>
-          <p class="inline">Artist Name</p>
-          <p class="inlineMiddle">Album Name</p>
-          <p class="inline">Genre</p>
+        <section class=musicstuff id="songlist">
         </section>
 
 <section id="add-view">
@@ -108,7 +79,7 @@
   <input>Artist</input>
   <input>Song</input>
   <input>Album</input>
-  <button>Add Music</button>
+  <button id="add-song">Add Music</button>
 </section>
 
       
@@ -116,6 +87,7 @@
 
 <script type="text/javascript" src="list.js"></script>
 <script type="text/javascript" src="add.js"></script>
+<script type="text/javascript" src="musichistoryv2.js"></script>
 </body>
 </html>
 
