--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         </section>
 
         <section class="songInfo">
-          <h1 class="song">Song Name</h1>
-          <p class="inline">Artist Name</p>
-          <p class="inlineMiddle">Album Name</p>
-          <p class="inline">Genre</p>
+          <h1 class="song">C.R.E.A.M</h1>
+          <p class="inline">Wu-Tang Clan</p>
+          <p class="inlineMiddle">Enter The Wu-Tang (36 Chambers)</p>
+          <p class="inline">Hip-Hop</p>
           <h1 class="song">Song Name</h1>
           <p class="inline">Artist Name</p>
           <p class="inlineMiddle">Album Name</p>
